# llm_finetuning

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data_blends/: marvin_blend_01.json
generate_datasets/: alpaca_4_to_simple_qa.py  dolly_es_to_simple_qa.py  lima_to_simple_qa.py  oasst_en_to_simple_qa.py  oasst_es_to_simple_qa.py  orca_slim_to_qa.py  recogs_to_simple_qa.py
shell/: finetune.sh  prepare_recogs.sh  verify_blend.sh  verify_resumption.sh
src/marvin_recipes/data/: modules.py  preparation.py  stream.py
src/marvin_recipes/distributed/: fsdp_policies.py  model_preparation.py  utils.py
src/marvin_recipes/misc/: observability.py  utils.py
src/marvin_recipes/models/: checkpoints.py  load.py  model_definitions.py
src/marvin_recipes/scripts/: fsdp_finetune.py  prepare_instruct_dataset.py  prepare_lm_dataset.py  verify_data_resumption.py  verify_dist_blend.py
src/marvin_recipes/train/: loops.py  utils.py
